overflow solved but sticky cards messed up

--- a/styles/header_test.css
+++ b/styles/header_test.css
@@ -3,8 +3,7 @@
     position: fixed;
     top: 0;
     left: 0; 
-    right: 0;
-    width: auto;
+    width: 100%;
     z-index: 20; 
     background-color: rgb(0, 0, 0);
     border-bottom: 1px solid #ccc;
@@ -61,8 +60,7 @@
     position: fixed;
     top: 66px;
     left: 0;
-    right: 0;
-    width: auto;
+    width: 100%;
     height: 30%;
     background-color: #000000;
     display: flex; 
